--- a/IslahGroup/Masters/MainSite.Master
+++ b/IslahGroup/Masters/MainSite.Master
@@ -4,7 +4,7 @@
 
 <html>
 <head runat="server">
-    <title>Islah Group</title>
+    <link rel="icon" href="../Images/favicon.ico">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
     <link rel="stylesheet" href="../Content/bootstrap.css"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
@@ -53,7 +53,7 @@
                     </li>
                 </ul>
 
-                <a class="btn btn-empty ml-md-3" href="./login.html">Login</a>
+                <a class="btn btn-empty ml-md-3" href="../Views/Login.aspx">Login</a>
             </div>
         </nav>
     </div>
