--- a/IslahGroup/Masters/MainSite.Master
+++ b/IslahGroup/Masters/MainSite.Master
@@ -33,23 +33,20 @@
 
             <div class="collapse navbar-collapse" id="navbarNav3">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">
-                            Home
-                            <span class="sr-only">(current)</span>
-                        </a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#">Companies</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="#">Clients</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Team</a>
+                        <a class="nav-link" href="#">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
 
@@ -72,11 +69,11 @@
                     <strong>Group 1</strong>
                 </h3>
                 <nav class="nav flex-column">
-                    <a class="nav-link active" href="https://www.froala.com">Home</a>
-                    <a class="nav-link" href="https://www.froala.com">Features</a>
-                    <a class="nav-link" href="https://www.froala.com">Pricing</a>
-                    <a class="nav-link" href="https://www.froala.com">Team</a>
-                    <a class="nav-link" href="https://www.froala.com">Contact Us</a>
+                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Team</a>
+                    <a class="nav-link" href="#">Contact Us</a>
                 </nav>
             </div>
 
@@ -85,10 +82,10 @@
                     <strong>Group 2</strong>
                 </h3>
                 <nav class="nav flex-column">
-                    <a class="nav-link active" href="https://www.froala.com">Privacy Policy</a>
-                    <a class="nav-link" href="https://www.froala.com">Terms</a>
-                    <a class="nav-link" href="https://www.froala.com">FAQ</a>
-                    <a class="nav-link" href="https://www.froala.com">Support</a>
+                    <a class="nav-link" href="#">Privacy Policy</a>
+                    <a class="nav-link" href="#">Terms</a>
+                    <a class="nav-link" href="#">FAQ</a>
+                    <a class="nav-link" href="#">Support</a>
                 </nav>
             </div>
 
@@ -107,19 +104,19 @@
                     <strong>Follow Us</strong>
                 </h3>
                 <p class="text-h3">
-                    <a href="https://www.froala.com">
+                    <a href="#">
                         <i class="fa fa-twitter" aria-hidden="true"></i>
                     </a>&nbsp;&nbsp;
-                    <a href="https://www.froala.com">
+                    <a href="#">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
                     </a>&nbsp;&nbsp;
-                    <a href="https://www.froala.com">
+                    <a href="#">
                         <i class="fa fa-instagram" aria-hidden="true"></i>
                     </a>&nbsp;&nbsp;
-                    <a href="https://www.froala.com">
+                    <a href="#">
                         <i class="fa fa-pinterest" aria-hidden="true"></i>
                     </a>&nbsp;&nbsp;
-                    <a href="https://www.froala.com">
+                    <a href="#">
                         <i class="fa fa-google" aria-hidden="true"></i>
                     </a>
                 </p>
@@ -128,7 +125,7 @@
 
         <div class="row mt-3">
             <div class="col text-center">
-                &copy; 2017 Froala. All Rights Reserved
+                &copy; <% Response.Write(DateTime.Today.Year); %> Islah Group. All Rights Reserved
             </div>
         </div>
     </div>
