Dashboard, Members and Member Register Page add

--- a/IslahGroup/Masters/MainSite.Master
+++ b/IslahGroup/Masters/MainSite.Master
@@ -50,7 +50,7 @@
                     </li>
                 </ul>
 
-                <a class="btn btn-empty ml-md-3" href="../Views/Login.aspx">Login</a>
+                <a class="btn btn-empty ml-md-3" href="../Admin/Login.aspx">Login</a>
             </div>
         </nav>
     </div>
