--- a/IslahGroup/Masters/AdminSite.Master
+++ b/IslahGroup/Masters/AdminSite.Master
@@ -217,6 +217,18 @@
                     </form>
                 </li>--%>
                 <li class="nav-item">
+                    <div class="dropdown">
+                        <a class="nav-link dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <asp:Label ID="LabelUserName" runat="server"></asp:Label>
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
                         <i class="fa fa-fw fa-sign-out"></i>Logout</a>
                 </li>
@@ -224,12 +236,12 @@
         </div>
     </nav>
     <div class="content-wrapper">
-<%--        <form id="form1" runat="server">--%>
-            <div>
-                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-                </asp:ContentPlaceHolder>
-            </div>
-<%--        </form>--%>
+        <%--        <form id="form1" runat="server">--%>
+        <div>
+            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+            </asp:ContentPlaceHolder>
+        </div>
+        <%--        </form>--%>
         <!-- /.content-wrapper-->
         <footer class="sticky-footer">
             <div class="container">
@@ -255,7 +267,9 @@
                     <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                     <div class="modal-footer">
                         <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                        <a class="btn btn-primary" href="login.html">Logout</a>
+                        <form runat="server">
+                            <asp:Button ID="ButtonLogout" type="button" CssClass="btn btn-primary" runat="server" Text="Logout" OnClick="ButtonLogout_Click"></asp:Button>
+                        </form>
                     </div>
                 </div>
             </div>
