--- a/IslahGroup/Masters/AdminSite.Master
+++ b/IslahGroup/Masters/AdminSite.Master
@@ -47,9 +47,9 @@
                     </a>
                 </li>
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
-                    <a class="nav-link" href="../Admin/Members.aspx">
+                    <a class="nav-link" href="../Admin/Owners.aspx">
                         <i class="fa fa-fw fa-users"></i>
-                        <span class="nav-link-text">Members</span>
+                        <span class="nav-link-text">Owners</span>
                     </a>
                 </li>
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
