--- a/IslahGroup/Masters/AdminSite.Master
+++ b/IslahGroup/Masters/AdminSite.Master
@@ -17,17 +17,6 @@
     <link href="../Content/datatables/dataTables.bootstrap4.css" rel="stylesheet">
     <!-- Custom styles for this template-->
     <link href="../Content/sb-admin/sb-admin.css" rel="stylesheet">
-    <script type="text/javascript">
-        function LogoutSessionClear() {
-            PageMethods.LogoutAndSessionClear();
-        }
-        function Success() {
-            console.log("Logout Success");
-        }
-        function Failure() {
-            console.log("Logout Failure");
-        }
-    </script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -50,6 +39,12 @@
                     <a class="nav-link" href="../Admin/Owners.aspx">
                         <i class="fa fa-fw fa-users"></i>
                         <span class="nav-link-text">Owners</span>
+                    </a>
+                </li>
+                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
+                    <a class="nav-link" href="../Admin/Expenditure.aspx">
+                        <i class="fa fa-fw fa-file-text"></i>
+                        <span class="nav-link-text">Expenditure</span>
                     </a>
                 </li>
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
