--- a/IslahGroup/Masters/MainSite.Master
+++ b/IslahGroup/Masters/MainSite.Master
@@ -1,160 +1,159 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="MainSite.master.cs" Inherits="IslahGroup.Masters.MainSite" %>
 
 <!DOCTYPE html>
-
 <html>
 <head runat="server">
     <link rel="icon" href="../Images/favicon.ico">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="../Content/bootstrap.css" />
-    <link rel="stylesheet" href="../Content/froala_blocks.css" />
-    <link rel="stylesheet" href="../Content/animate.min.css" />
-    <link rel="stylesheet" href="../Content/cssanimation.min.css" />
-    <link rel="stylesheet" href="../Content/magnific-popup.css" />
-    <link rel="stylesheet" href="../Content/mixitup.css" />
-    <link rel="stylesheet" href="../Content/style.css" />
-
-    <script src="../Scripts/bootstrap.js"></script>
-    <script src="../Scripts/jquery-3.0.0.js"></script>
+    <link rel="stylesheet" href="../Content/animate.css">
+    <link href="../Content/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../Content/jquery-ui.css">
+    <link rel="stylesheet" href="../Content/owl.carousel.css">
+    <link rel="stylesheet" href="../Content/responsive.css">
+    <link rel="stylesheet" href="../Content/owl.theme.default.css">
+    <link rel="stylesheet" href="../Content/blueimp-gallery.css">
+    <link rel="stylesheet" href="../Content/style.css">
 
     <asp:ContentPlaceHolder ID="Head" runat="server">
     </asp:ContentPlaceHolder>
-
-    <style>
-        .fdb-block {
-            border-bottom: solid 1px #EEE;
-        }
-    </style>
 </head>
 <body runat="server">
-    <header class="fixed-top">
-        <div class="container">
-            <nav class="navbar navbar-expand-md">
-                <a class="navbar-brand" href="#">
-                    <img src="../Images/islah_logo.png" height="30" alt="image">
-                </a>
-
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav3" aria-controls="navbarNav3"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarNav3">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
-                        </li>
-                        <li class="nav-item page-scroll">
-                            <a class="nav-link" href="#about-us">About Us</a>
-                        </li>
-                        <li class="nav-item page-scroll">
-                            <a class="nav-link" href="#industry-verticals">Industry Verticals</a>
-                        </li>
-                        <li class="nav-item page-scroll">
-                            <a class="nav-link" href="#our-services">Our Services</a>
-                        </li>
-                        <li class="nav-item page-scroll">
-                            <a class="nav-link" href="#companies">Companies</a>
-                        </li>
-                        <li class="nav-item page-scroll">
-                            <a class="nav-link" href="#industries">Our Industries</a>
-                        </li>
-                        <li class="nav-item page-scroll">
-                            <a class="nav-link" href="#location">Location</a>
-                        </li>
-                    </ul>
-
-                    <a class="btn btn-empty ml-md-3" href="../Admin/Login.aspx">Login</a>
+    <header>
+        <div class="top-bar" style="background-color: #e3f2fd;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <nav class="navbar navbar-expand-lg navbar-light">
+                            <a class="navbar-brand" href="../Default.aspx">
+                                <img src="../Images/islah_logo.png" width="100" height="100" alt=""></a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav mr-auto">
+                                    <li class="nav-item active">
+                                        <a class="nav-link ttfw" href="../Default.aspx">Home<span class="sr-only"></span></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link ttfw" href="../About.aspx">About Us </a>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle ttfw" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Media
+                                        </a>
+                                        <div class="dropdown-menu" aria-labelledby="navbarMediaDropdown">
+                                            <a class="dropdown-item ttfw" href="../ImageGallery.aspx">Images</a>
+                                            <div class="dropdown-divider"></div>
+                                            <a class="dropdown-item ttfw" href="../VideoGallery.aspx">Videos</a>
+                                        </div>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link ttfw" href="../Contact.aspx">Contact</a>
+                                    </li>
+                                </ul>
+                                <a class="btn btn-outline-primary my-2 my-sm-0 mr-1" href="../RegisterMember.aspx">Member Registration</a>
+                                <a class="btn btn-outline-success my-2 my-sm-0" href="../Admin/Login.aspx">Login</a>
+                            </div>
+                        </nav>
+                    </div>
                 </div>
-            </nav>
+            </div>
         </div>
     </header>
     <div>
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
         </asp:ContentPlaceHolder>
     </div>
-    <footer class="fdb-block footer-large">
-        <div class="container">
-            <div class="row align-items-top text-center">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 text-sm-left">
-                    <h3>
-                        <strong>Group 1</strong>
-                    </h3>
-                    <nav class="nav flex-column">
-                        <a class="nav-link" href="#">Home</a>
-                        <a class="nav-link" href="#">Features</a>
-                        <a class="nav-link" href="#">Pricing</a>
-                        <a class="nav-link" href="#">Team</a>
-                        <a class="nav-link" href="#">Contact Us</a>
-                    </nav>
-                </div>
-
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-5 mt-sm-0 text-sm-left">
-                    <h3>
-                        <strong>Group 2</strong>
-                    </h3>
-                    <nav class="nav flex-column">
-                        <a class="nav-link" href="#">Privacy Policy</a>
-                        <a class="nav-link" href="#">Terms</a>
-                        <a class="nav-link" href="#">FAQ</a>
-                        <a class="nav-link" href="#">Support</a>
-                    </nav>
-                </div>
-
-                <div class="col-12 col-md-4 col-lg-3 text-md-left mt-5 mt-md-0">
-                    <h3>
-                        <strong>About Us</strong>
-                    </h3>
-                    <p>
-                        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                    blind texts.
-                    </p>
-                </div>
-
-                <div class="col-12 col-lg-2 ml-auto text-lg-left mt-4 mt-lg-0">
-                    <h3>
-                        <strong>Follow Us</strong>
-                    </h3>
-                    <p class="text-h3">
-                        <a href="#">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                        </a>&nbsp;&nbsp;
-                    <a href="#">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                    </a>&nbsp;&nbsp;
-                    <a href="#">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                    </a>&nbsp;&nbsp;
-                    <a href="#">
-                        <i class="fa fa-pinterest" aria-hidden="true"></i>
-                    </a>&nbsp;&nbsp;
-                    <a href="#">
-                        <i class="fa fa-google" aria-hidden="true"></i>
-                    </a>
-                    </p>
+    <footer class="footer-bg">
+        <div class="footer-top-area pad-30 border-color">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-4 col-sm-4">
+                        <div class="footer-widget">
+                            <a href="#">
+                                <img src="img/logo/1.png" alt="" /></a>
+                            <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit.</p>
+                            <div class="social-icon">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-google-plus"></i></a>
+                                <a href="#"><i class="fa fa-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3">
+                        <div class="footer-widget">
+                            <h4 class="footer-title">Clients</h4>
+                            <ul class="footer-menu">
+                                <li><a href="#">Client1</a></li>
+                                <li><a href="#">Client2</a></li>
+                                <li><a href="#">Client3</a></li>
+                                <li><a href="#">Client4</a></li>
+                                <li><a href="#">Client5</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 hidden-md hidden-sm">
+                        <div class="footer-widget">
+                            <h4 class="footer-title">Brands</h4>
+                            <ul class="footer-menu">
+                                <li><a href="#">Brand1</a></li>
+                                <li><a href="#">Brand2</a></li>
+                                <li><a href="#">Brand3</a></li>
+                                <li><a href="#">Brand4</a></li>
+                                <li><a href="#">Brand5</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-5 col-sm-5">
+                        <div class="footer-widget">
+                            <h4 class="footer-title">CONTACT US</h4>
+                            <ul class="footer-contact">
+                                <li>
+                                    <i class="fa fa-map-marker"></i>
+                                    <span>Your Road Number, Your Area or Street Name, Your City Name</span>
+                                </li>
+                                <li>
+                                    <i class="fa fa-map-marker"></i>
+                                    <span>Your Road Number, Your Area or Street Name, Your City Name</span>
+                                </li>
+                                <li>
+                                    <i class="fa fa-map-marker"></i>
+                                    <span>Your Road Number, Your Area or Street Name, Your City Name</span>
+                                </li>
+                                <li>
+                                    <i class="fa fa-map-marker"></i>
+                                    <span>Your Road Number, Your Area or Street Name, Your City Name</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-            <div class="row mt-3">
-                <div class="col text-center">
-                    &copy; <% Response.Write(DateTime.Today.Year); %> Islah Group. All Rights Reserved
+        </div>
+        <div class="copyright-area pad-30">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="copyright">
+                            <p>Copyright IslahGroupBD All rights reserved.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </footer>
-    <script type="text/javascript" src="../Scripts/scrolly.min.js"></script>
-    <script type="text/javascript" src="../Scripts/jquery.mixitup.min.js"></script>
-    <script type="text/javascript" src="../Scripts/jquery-easing/jquery.easing.js"></script>
-    <script type="text/javascript" src="../Scripts/index-scripts.js"></script>
-    <script type="text/javascript" src="../Scripts/scrolly.min.js"> </script>
-    <script type="text/javascript" src="../Scripts/jquery.magnific-popup.min.js"></script>
-    <script type="text/javascript" src="../Scripts/jquery.fancybox.min.js"></script>
+    <script src="../Scripts/modernizr-3.5.0.min.js"></script>
+    <script src="../Scripts/bootstrap.js"></script>
+    <script src="../Scripts/jquery-3.0.0.js"></script>
+    <script src="../Scripts/jquery-ui.js"></script>
+    <script src="../Scripts/owl.carousel.js"></script>
+    <script src="../Scripts/blueimp-gallery.js"></script>
+    <script src="../Scripts/blueimp-gallery-video.js"></script>
+    <script src="../Scripts/blueimp-gallery-youtube.js"></script>
     <script type="text/javascript" src="../Scripts/plugins.js"></script>
     <script type="text/javascript" src="../Scripts/main.js"></script>
-    <script>
-
-</script>
+    <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server"></asp:ContentPlaceHolder>
 </body>
 </html>
